# etude

./: .gitignore  README.md
akka/: README.md
akka/examples/simple-cluster/: build.sbt
akka/examples/ws-client/: build.sbt
algorithm/pricing/: pricing.c
apache/: README.md
apache/ajp-balancer/: ajp-balancer.conf
apache/buffering/: README.md
apache/changing-ports/: README.md
apache/ldap-auth/: login.conf
apache/rewrite/: rewrite.conf
c++/algorithm/: CMakeLists.txt
c++/algorithm/tests/: for-each-number-test.cpp
c++/constexpr-function/: endian-test.cpp
c++/functional/: bind-test.cpp
c++/regex/: match-XX.cpp
c++/set/: CMakeLists.txt
c++/set/include/: key.h
c++/set/test/: fail-test.cpp  key-id-test.cpp
c/bits/: alarm-log.c  alarm-log.escript  bit-order.c  bit-order.escript
c/stdint/: CMakeLists.txt  build.bat  build.sh
c/stdint/app/: stdint-example.c
c/stdint/test/: fail-test.cpp
c/stdint/tests/: printf-format.cpp
cassandra/: README.md
cobol/hello/: hello  hello.cob  hello.s
concurrency/: README.md
coroutine/: README.md  state-test.c
data-structure/: README.md
data-structure/map/sorted/: README.md  sorted_map.cpp
data-structure/memory-pool/: memory-pool.hpp
data-structure/ring-buffer/: ring-buffer-test.cpp  ring-buffer.c  ring-buffer.hpp
docker/: insecure-registry.md
docker/docker-registry/: docker-compose.yaml
docker/docs-server/: .gitignore  Dockerfile  run.sh
docker/moving-images/: README.md
docker/openvpn/kylemanna/: docker-compose.yaml  run.sh
docker/openvpn/linuxserver.io/: docker-compose.yaml
docker/oracle/enterprise/: README.md
docker/play/akka/: README.md
docker/restart-policy/: README.md
docker/run/: README.md
docker/sqlserver/: README.md
docker/tool-tips/: README.md
erlang/: .gitignore
erlang/hello_erlang/: Makefile  README.md  relx.config
git/: README.md
git/loc-changes/: build.sbt
gpg/: README.md
gsl/schema-gen/: message.gsl  messages.gsl  messages.xml
haskell/: .gitignore  README.md
haskell/file/: CHANGELOG.md  file.cabal
haskell/neat-interpo/: CHANGELOG.md  multiline.txt  neat-interpo.cabal
haskell/state/: CHANGELOG.md  statem.cabal
haskell/system/mylib-ffi/: CHANGELOG.md  CMakeLists.txt  Mylib.sln  README.md  autogen.sh  build.bat  clean.sh  mylib.cabal  mylib.vcxproj  mylib.vcxproj.filters  stack.yaml  vs.bat
haskell/system/mylib-ffi/Mylib/: Base.hs
haskell/system/mylib-ffi/Mylib/Base/: C.hsc  Types.hsc
haskell/system/mylib-ffi/app/: Main.hs
haskell/system/mylib-ffi/cbits/: myapp.c  mylib.c
haskell/system/mylib-ffi/include/: mylib.h
iis/: README.md
java/: README.md
java/overrides/: pom.xml
javascript/: README.md
jee/saaj/: pom.xml
jee/spring/: README.md
lagom/hello/: pom.xml  update.sh
lagom/hello-scala/: README.md  build.sbt
linux/fedora/: package.md
linux/inter-process/: README.md
linux/settings/: README.md  desktop-settings.md  file-system.md
linux/shell/: links.md
maven/: README.md
mem-mgmt/: README.md
mysql/: README.md
nginx/: solve-c10k-with-rproxy.md
nodejs/install/: README.md
oracle/: .README.md.swp  README.md
playframework/: README.md
playframework/websocket/: README.md  build.sbt
protobuf/: README.md
quarkus/sqlserver/: README.md
regex/: README.md
regex/sed/: README.md
rust/: compile.sh
rust/hello/: Cargo.toml
sbt/: README.md
scala.js/hello/: build.sbt  hello.html  package-lock.json  package.json
spring/boot/: README.md
spring/rest/: archetypes.txt  spring-archetypes.txt
sqlserver/: README.md
sqlserver/bcp/: README.md
sqlserver/sqlcmd/: README.md  db_matrix.ddl
sqlserver/transposed/: README.md
ssh/without-passwd/: README.md
svn/backup/: backup-energy-svn.sh  backup-m2m-svn-backup.sh  backup-m2m-svn.sh
svn/docker/: Dockerfile  build.sh  run.sh
timeout/timeout-test/: timeout-test.cabal
timeout/timer-test/: stack.yaml  timer-test.cabal
unix/readlink/: readself.c
unix/realpath/: realpath.c
unixodbc/: README.md  mariadb-odbc-datasource-template.ini  mariadb-odbc-driver-template.ini  sqlserver-odbc-datasource-template.ini
websockets/clients/: netcat.md
win32/: project.xml
win32/clock/erlang/: .gitignore  CMakeLists.txt  README.md  clock-win-x64-otp17.rel  clock-win64-otp17.rel  sys.config
win32/clock/erlang/apps/clock/ebin/: clock.app
win32/clock/erlang/apps/clock/src/: clock.erl  clock_app.erl  clock_sup.erl
win32/clock/erlang/build-scripts/: build-vs2005.bat  build-w2k3-sdk-x86.bat  build-w2k3-sdk.bat
win32/clock/erlang/src/: clock.c  clock.erl  clock.rc  resource.h  test-cmd.txt  version.h
win32/hello-asm/: CMakeLists.txt  build-w2003sdk.bat  hello.asm  helloc.c
win32/limits/: sizeof.c  time_t.c
win32/locales/: CMakeLists.txt
win32/mem-status/: CMakeLists.txt  build-vs2005.bat  build-vs2008.bat  build-vs2019.bat  build-w2003sdk.bat  build-w2003sdk32.bat
win32/mem-status/src/: disk-space.c  mem-status.c  process.c  sys-info.c  timezone.c  version.c  volume.c
win32/mfc/serialize/: CMakeLists.txt  README.md  build.bat
win32/mfc/serialize/cstring/: main.cpp
win32/mfc/serialize/include/: Location.h  Person.h
win32/mfc/serialize/location/: Location.cpp  main.cpp
win32/mfc/serialize/person/: Person.cpp  main.cpp
win32/mfc/serialize/personu/: Person.cpp
win32/perf-counter/: .gitignore  CMakeLists.txt  Makefile.am  configure.ac
win32/perfctrs-enum-objects/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md  autogen.sh  configure.ac
win32/perfctrs-enum-objects/include/: config.h.in
win32/perfctrs-enum-objects/src/: format-message.c  perfctrs-enum-object-items.c  perfctrs-enum-objects.c  perfctrs-enum-objects.h  perfctrs.c
win32/trivial/: CMakeLists.txt  build-w2003sdk.bat  trivial.c
win32/trivialpp/: CMakeLists.txt  build-vs2008.bat  build-w2003sdk.bat  trivial.cpp
win32/version/: Makefile  Makefile.am  README.md  autogen.sh  configure.ac
win32/version/include/: Makefile.am
win32/version/include/version/: config.h  config.h.in  stamp-h1
win32/version/src/: version.c  version_supp.c  version_supp.h
(+672 files in other folders)
