cmake_minimum_required(VERSION 2.8...3.20)

set(CMAKE_ASM_MASM_LINK_EXECUTABLE "<CMAKE_LINKER> <FLAGS> <CMAKE_ASM_MASM_LINK_FLAGS> <LINK_FLAGS> <OBJECTS> /OUT:<TARGET> <LINK_LIBRARIES> /ENTRY:main")
set(CMAKE_RC_COMPILE_OBJECT        "$ENV{RC} <DEFINES> <INCLUDES> <FLAGS> /r /Fo<OBJECT> <SOURCE>")

project(hello C ASM_MASM)

ADD_DEFINITIONS(-D_WIN32_WINNT=_WIN32_WINNT_WS03)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-D_UNICODE)
ADD_DEFINITIONS(-DUNICODE)

set(CompilerFlags
        CMAKE_CXX_FLAGS
        CMAKE_CXX_FLAGS_DEBUG
        CMAKE_CXX_FLAGS_RELEASE
        CMAKE_C_FLAGS
        CMAKE_C_FLAGS_DEBUG
        CMAKE_C_FLAGS_RELEASE
        )
foreach(CompilerFlag ${CompilerFlags})
  string(REPLACE "/MD" "/MT" ${CompilerFlag} "${${CompilerFlag}}")
endforeach()

include_directories(
  include
  ${INCLUDE_DIRECTORIES}
  ${CMAKE_INSTALL_PREFIX}/include
)

link_directories(
  ${LINK_DIRECTORIES}
  ${CMAKE_INSTALL_PREFIX}/lib
)

set(HELLO_SRCS
  hello.asm
  helloc.c
  )

add_executable(hello-asm ${HELLO_SRCS})

install(TARGETS
  hello-asm
  CONFIGURATIONS Release
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )

install(TARGETS
  hello-asm
  CONFIGURATIONS Debug
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)


