CMAKE_MINIMUM_REQUIRED(VERSION 2.8...3.20)
PROJECT(mem-status C)

if(MSVC)
  SET(CMAKE_CXX_FLAGS "/MT /EHsc")
  ADD_DEFINITIONS(-D_WIN32_WINNT=_WIN32_WINNT_WS08)
  ADD_DEFINITIONS(-D_UNICODE)
  ADD_DEFINITIONS(-DUNICODE)
endif()

INCLUDE_DIRECTORIES(
  app
  include
  ${CMAKE_INSTALL_PREFIX}/include
  ${INCLUDE_DIRECTORIES}
)

LINK_DIRECTORIES(
  lib
  ${CMAKE_INSTALL_PREFIX}/lib
  ${LINK_DIRECTORIES} 
  ${LIBRARY_OUTPUT_PATH}
)

find_package(Threads REQUIRED)

SET(SYNC_MEM_STATUS_SRCS
  src/mem-status.c
)

ADD_EXECUTABLE(mem-status ${SYNC_MEM_STATUS_SRCS})
target_link_libraries(mem-status pdh)
set_property(TARGET mem-status PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

INSTALL(TARGETS
  mem-status
  CONFIGURATIONS Release
  EXPORT synchronized
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )

INSTALL(TARGETS
  mem-status
  CONFIGURATIONS Debug
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

