AC_PREREQ(2.59)

AC_INIT([Version], [1.0.0.0], [xtwxy@hotmail.com], [version], [https://github.com/xtwxy])
AC_PROG_CC

#AC_CANONICAL_SYSTEM

AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([-Wall -Werror tar-ustar subdir-objects 1.9])

#AM_PROG_CC_C_O 

AC_CONFIG_HEADERS([include/config.h])

AC_CONFIG_FILES([
    Makefile
])

AC_OUTPUT

