#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([perfctrs-enum-objects], [1.0.0.0], [https://github.com/apuex/etude])

AC_CONFIG_SRCDIR([src/perfctrs-enum-objects.c])
AC_CONFIG_HEADERS([include/config.h])

AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([malloc.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC

AC_OUTPUT([Makefile])

AC_OUTPUT
