cmake_minimum_required(VERSION 2.8...3.20)

project(trivial CXX)

ADD_DEFINITIONS(-D_WIN32_WINNT=0x0502)
ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-D_UNICODE)
ADD_DEFINITIONS(-DUNICODE)

SET(CMAKE_CXX_FLAGS "/EHsc")

include_directories(
  include
  ${INCLUDE_DIRECTORIES}
  ${CMAKE_INSTALL_PREFIX}/include
)

link_directories(
  ${LINK_DIRECTORIES}
  ${CMAKE_INSTALL_PREFIX}/lib
)

set(TRIVIAL_SRCS
  trivial.cpp
  )

add_executable(trivial WIN32 ${TRIVIAL_SRCS})
target_link_libraries(trivial user32)

INCLUDE(CTest)
ENABLE_TESTING()

install(TARGETS
  trivial
  CONFIGURATIONS Release
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )

install(TARGETS
  trivial
  CONFIGURATIONS Debug
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)


